--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,20 @@
     box-shadow: 0 0 60px #c78030;
   }
 }
+
+.more-splash {
+  animation-name: splash;
+  animation-duration: 1.7s;
+}
+
+@keyframes splash{
+  from {
+    box-shadow: 0 0 10px @main-color;
+  }
+  to {
+    box-shadow: 0 0 60px @main-color;
+  }
+}
 * {
   box-sizing: border-box;
   margin: 0;
